server: refactor + new endpoint
