# open-api/immich-openapi-specs.json
@@ -3430,6 +3430,51 @@
         ]
       }
     },
+    "/memorylane": {
+      "post": {
+        "operationId": "getMemoryLanes",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/MemorylanesBodyDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "201": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "items": {
+                    "$ref": "#/components/schemas/MemorylaneResponseDto"
+                  },
+                  "type": "array"
+                }
+              }
+            },
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          },
+          {
+            "cookie": []
+          },
+          {
+            "api_key": []
+          }
+        ],
+        "tags": [
+          "MemoryLane"
+        ]
+      }
+    },
     "/memorylane/{id}": {
       "get": {
         "operationId": "getMemoryLane",
@@ -7631,11 +7676,7 @@
             "type": "string"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/ReactionType"
-              }
-            ]
+            "$ref": "#/components/schemas/ReactionType"
           }
         },
         "required": [
@@ -7662,11 +7703,7 @@
             "type": "string"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/ReactionType"
-              }
-            ]
+            "$ref": "#/components/schemas/ReactionType"
           },
           "user": {
             "$ref": "#/components/schemas/UserResponseDto"
@@ -7767,11 +7804,7 @@
             "type": "string"
           },
           "order": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AssetOrder"
-              }
-            ]
+            "$ref": "#/components/schemas/AssetOrder"
           },
           "owner": {
             "$ref": "#/components/schemas/UserResponseDto"
@@ -7831,12 +7864,7 @@
       "AlbumUserAddDto": {
         "properties": {
           "role": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AlbumUserRole"
-              }
-            ],
-            "default": "editor"
+            "$ref": "#/components/schemas/AlbumUserRole"
           },
           "userId": {
             "format": "uuid",
@@ -7851,11 +7879,7 @@
       "AlbumUserCreateDto": {
         "properties": {
           "role": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AlbumUserRole"
-              }
-            ]
+            "$ref": "#/components/schemas/AlbumUserRole"
           },
           "userId": {
             "format": "uuid",
@@ -7871,11 +7895,7 @@
       "AlbumUserResponseDto": {
         "properties": {
           "role": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AlbumUserRole"
-              }
-            ]
+            "$ref": "#/components/schemas/AlbumUserRole"
           },
           "user": {
             "$ref": "#/components/schemas/UserResponseDto"
@@ -8176,11 +8196,7 @@
             "nullable": true
           },
           "sourceType": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/SourceType"
-              }
-            ]
+            "$ref": "#/components/schemas/SourceType"
           }
         },
         "required": [
@@ -8251,11 +8267,7 @@
             "type": "integer"
           },
           "sourceType": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/SourceType"
-              }
-            ]
+            "$ref": "#/components/schemas/SourceType"
           }
         },
         "required": [
@@ -8351,11 +8363,7 @@
             "type": "array"
           },
           "name": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AssetJobName"
-              }
-            ]
+            "$ref": "#/components/schemas/AssetJobName"
           }
         },
         "required": [
@@ -8453,11 +8461,7 @@
             "type": "string"
           },
           "status": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AssetMediaStatus"
-              }
-            ]
+            "$ref": "#/components/schemas/AssetMediaStatus"
           }
         },
         "required": [
@@ -8598,11 +8602,7 @@
             "type": "string"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AssetTypeEnum"
-              }
-            ]
+            "$ref": "#/components/schemas/AssetTypeEnum"
           },
           "unassignedFaces": {
             "items": {
@@ -8715,11 +8715,7 @@
       "AvatarResponse": {
         "properties": {
           "color": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/UserAvatarColor"
-              }
-            ]
+            "$ref": "#/components/schemas/UserAvatarColor"
           }
         },
         "required": [
@@ -8730,11 +8726,7 @@
       "AvatarUpdate": {
         "properties": {
           "color": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/UserAvatarColor"
-              }
-            ]
+            "$ref": "#/components/schemas/UserAvatarColor"
           }
         },
         "type": "object"
@@ -9371,18 +9363,10 @@
             "type": "string"
           },
           "entityType": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/PathEntityType"
-              }
-            ]
+            "$ref": "#/components/schemas/PathEntityType"
           },
           "pathType": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/PathType"
-              }
-            ]
+            "$ref": "#/components/schemas/PathType"
           },
           "pathValue": {
             "type": "string"
@@ -9459,11 +9443,7 @@
       "JobCommandDto": {
         "properties": {
           "command": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/JobCommand"
-              }
-            ]
+            "$ref": "#/components/schemas/JobCommand"
           },
           "force": {
             "type": "boolean"
@@ -9508,11 +9488,7 @@
       "JobCreateDto": {
         "properties": {
           "name": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/ManualJobName"
-              }
-            ]
+            "$ref": "#/components/schemas/ManualJobName"
           }
         },
         "required": [
@@ -9926,11 +9902,7 @@
             "type": "string"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/MemoryType"
-              }
-            ]
+            "$ref": "#/components/schemas/MemoryType"
           }
         },
         "required": [
@@ -9995,11 +9967,7 @@
             "type": "string"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/MemoryType"
-              }
-            ]
+            "$ref": "#/components/schemas/MemoryType"
           },
           "updatedAt": {
             "format": "date-time",
@@ -10041,6 +10009,24 @@
         },
         "type": "object"
       },
+      "MemorylaneRequest": {
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "limit": {
+            "minimum": 1,
+            "type": "number"
+          },
+          "type": {
+            "$ref": "#/components/schemas/MemorylaneType"
+          }
+        },
+        "required": [
+          "id"
+        ],
+        "type": "object"
+      },
       "MemorylaneResponseDto": {
         "properties": {
           "assets": {
@@ -10048,6 +10034,9 @@
               "$ref": "#/components/schemas/AssetResponseDto"
             },
             "type": "array"
+          },
+          "id": {
+            "type": "string"
           },
           "metadata": {
             "discriminator": {
@@ -10079,15 +10068,12 @@
             ]
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/MemorylaneType"
-              }
-            ]
+            "$ref": "#/components/schemas/MemorylaneType"
           }
         },
         "required": [
           "assets",
+          "id",
           "metadata",
           "type"
         ],
@@ -10102,6 +10088,20 @@
           "year"
         ],
         "type": "string"
+      },
+      "MemorylanesBodyDto": {
+        "properties": {
+          "requests": {
+            "items": {
+              "$ref": "#/components/schemas/MemorylaneRequest"
+            },
+            "type": "array"
+          }
+        },
+        "required": [
+          "requests"
+        ],
+        "type": "object"
       },
       "MergePersonDto": {
         "properties": {
@@ -10190,11 +10190,7 @@
             "type": "string"
           },
           "order": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AssetOrder"
-              }
-            ]
+            "$ref": "#/components/schemas/AssetOrder"
           },
           "originalFileName": {
             "type": "string"
@@ -10245,11 +10241,7 @@
             "type": "string"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AssetTypeEnum"
-              }
-            ]
+            "$ref": "#/components/schemas/AssetTypeEnum"
           },
           "updatedAfter": {
             "format": "date-time",
@@ -10333,11 +10325,7 @@
       "PartnerResponseDto": {
         "properties": {
           "avatarColor": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/UserAvatarColor"
-              }
-            ]
+            "$ref": "#/components/schemas/UserAvatarColor"
           },
           "email": {
             "type": "string"
@@ -10855,11 +10843,7 @@
             "type": "string"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AssetTypeEnum"
-              }
-            ]
+            "$ref": "#/components/schemas/AssetTypeEnum"
           },
           "updatedAfter": {
             "format": "date-time",
@@ -11531,11 +11515,7 @@
             "type": "boolean"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/SharedLinkType"
-              }
-            ]
+            "$ref": "#/components/schemas/SharedLinkType"
           }
         },
         "required": [
@@ -11620,11 +11600,7 @@
             "type": "string"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/SharedLinkType"
-              }
-            ]
+            "$ref": "#/components/schemas/SharedLinkType"
           },
           "userId": {
             "type": "string"
@@ -11774,11 +11750,7 @@
             "type": "string"
           },
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AssetTypeEnum"
-              }
-            ]
+            "$ref": "#/components/schemas/AssetTypeEnum"
           },
           "updatedAfter": {
             "format": "date-time",
@@ -11960,11 +11932,7 @@
       "SystemConfigFFmpegDto": {
         "properties": {
           "accel": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/TranscodeHWAccel"
-              }
-            ]
+            "$ref": "#/components/schemas/TranscodeHWAccel"
           },
           "accelDecode": {
             "type": "boolean"
@@ -11993,11 +11961,7 @@
             "type": "integer"
           },
           "cqMode": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/CQMode"
-              }
-            ]
+            "$ref": "#/components/schemas/CQMode"
           },
           "crf": {
             "maximum": 51,
@@ -12023,21 +11987,13 @@
             "type": "integer"
           },
           "targetAudioCodec": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AudioCodec"
-              }
-            ]
+            "$ref": "#/components/schemas/AudioCodec"
           },
           "targetResolution": {
             "type": "string"
           },
           "targetVideoCodec": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/VideoCodec"
-              }
-            ]
+            "$ref": "#/components/schemas/VideoCodec"
           },
           "temporalAQ": {
             "type": "boolean"
@@ -12047,18 +12003,10 @@
             "type": "integer"
           },
           "tonemap": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/ToneMapping"
-              }
-            ]
+            "$ref": "#/components/schemas/ToneMapping"
           },
           "transcode": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/TranscodePolicy"
-              }
-            ]
+            "$ref": "#/components/schemas/TranscodePolicy"
           },
           "twoPass": {
             "type": "boolean"
@@ -12103,11 +12051,7 @@
       "SystemConfigGeneratedImageDto": {
         "properties": {
           "format": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/ImageFormat"
-              }
-            ]
+            "$ref": "#/components/schemas/ImageFormat"
           },
           "quality": {
             "maximum": 100,
@@ -12129,11 +12073,7 @@
       "SystemConfigImageDto": {
         "properties": {
           "colorspace": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/Colorspace"
-              }
-            ]
+            "$ref": "#/components/schemas/Colorspace"
           },
           "extractEmbedded": {
             "type": "boolean"
@@ -12255,11 +12195,7 @@
             "type": "boolean"
           },
           "level": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/LogLevel"
-              }
-            ]
+            "$ref": "#/components/schemas/LogLevel"
           }
         },
         "required": [
@@ -12934,11 +12870,7 @@
             "type": "boolean"
           },
           "order": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AssetOrder"
-              }
-            ]
+            "$ref": "#/components/schemas/AssetOrder"
           }
         },
         "type": "object"
@@ -12946,11 +12878,7 @@
       "UpdateAlbumUserDto": {
         "properties": {
           "role": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/AlbumUserRole"
-              }
-            ]
+            "$ref": "#/components/schemas/AlbumUserRole"
           }
         },
         "required": [
@@ -13117,11 +13045,7 @@
       "UserAdminResponseDto": {
         "properties": {
           "avatarColor": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/UserAvatarColor"
-              }
-            ]
+            "$ref": "#/components/schemas/UserAvatarColor"
           },
           "createdAt": {
             "format": "date-time",
@@ -13176,11 +13100,7 @@
             "type": "boolean"
           },
           "status": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/UserStatus"
-              }
-            ]
+            "$ref": "#/components/schemas/UserStatus"
           },
           "storageLabel": {
             "nullable": true,
@@ -13353,11 +13273,7 @@
       "UserResponseDto": {
         "properties": {
           "avatarColor": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/UserAvatarColor"
-              }
-            ]
+            "$ref": "#/components/schemas/UserAvatarColor"
           },
           "email": {
             "type": "string"
