# server/src/dtos/memorylane.dto.ts
@@ -1,9 +1,10 @@
 import { ApiExtraModels, ApiProperty, getSchemaPath } from '@nestjs/swagger';
 import { Type } from 'class-transformer';
-import { IsInt, IsNotEmpty, IsPositive, IsString } from 'class-validator';
+import {IsArray, IsInt, IsNotEmpty, IsPositive, IsString, ValidateNested} from 'class-validator';
 import { AssetResponseDto } from 'src/dtos/asset-response.dto';
 import { MemorylaneType } from 'src/enum';
 import { Optional } from 'src/validation';
+import {PeopleUpdateItem} from "./person.dto";
 
 export class MemorylaneParamDto {
   @IsNotEmpty()
@@ -21,6 +22,32 @@ export class MemorylaneQueryDto {
   @Optional()
   type?: MemorylaneType;
 }
+
+
+export class MemorylaneRequest {
+  @IsNotEmpty()
+  @IsString()
+  id!: string;
+
+  @Optional()
+  @IsInt()
+  @IsPositive()
+  @Type(() => Number)
+  limit?: number;
+
+  @ApiProperty({ enumName: 'MemorylaneType', enum: MemorylaneType })
+  @Optional()
+  type?: MemorylaneType;
+}
+
+export class MemorylanesBodyDto {
+  @IsArray()
+  @ValidateNested({ each: true })
+  @Type(() => MemorylaneRequest)
+  requests!: MemorylaneRequest[];
+}
+
+
 
 export class MemorlaneClusterMetadata {
   clusterID?: number;
@@ -51,6 +78,7 @@ export class MemorlaneYearMetadata {
   MemorlaneYearMetadata,
 )
 export class MemorylaneResponseDto {
+  id!: string;
   @ApiProperty({ enumName: 'MemorylaneType', enum: MemorylaneType })
   type!: MemorylaneType;
   assets!: AssetResponseDto[];
